tech-challenge-backend/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-challenge-app
spec:
  selector:
    app: tech-challenge-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
