tech-challenge-backend/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-challenge-postgres
spec:
  selector:
    app: tech-challenge-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
