tech-challenge-backend/k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tech-challenge-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: tech-challenge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tech-challenge-app
                port:
                  number: 80
